# IMprovEEsation

./: .gitignore  CMakeLists.txt  IMprovEEsation.files  IMprovEEsation.includes  Makefile  README.md  db.sql  example_.improveesation.rc  improveesation.patch
Documentation/: MUSICIAN.md  PATTERN.md  PLAYER.md  PROTOCOL.md  TODO.md  graphs_draft.md
Report/: Makefile  reportITA.tex
Report/core/: abstract.tex  art.tex  biblio.tex  communication.tex  components.tex  conclusions.tex  experimental.tex  future.tex  intro.tex  learning.tex  model.tex  overview.tex  representation.tex  representation.tex~  thinking.tex  thinking_dir.tex  thinking_mus.tex
core/: communication.cpp  configuration.cpp  db.cpp  db_library_test.cpp  director_communication_test.cpp  director_core.cpp  director_main.cpp  midi_writer.cpp  musician_communication_test.cpp  musician_core.cpp  musician_evolution.cpp  musician_genetic.cpp  musician_improviser.cpp  musician_main.cpp  player_communication_test.cpp  player_core.cpp  player_main.cpp  tui.cpp  utils.cpp
data/genres/blues/: base  bebop  bertocchi  blues_for_alice  charlie_parker  coltrane  freedie_free_loader  isotope  standard
data/patterns/: measure0000  measure0001  measure0002  pattern0000
db/: impro_db.csv  impro_db.sql
include/: musician_genetic.h
include/improveesation/: communication.h  configuration.h  const.h  db.h  director_core.h  midi_writer.h  musician_core.h  musician_evolution.h  musician_genetic.h  musician_improviser.h  player_core.h  structs.h  tui.h  utils.h
include/linux/: list.h
lib/: Makefile  notePicker.c  notePicker.h  test.c
samples/: blues_slow_sax.gme  blues_slow_sax.gme~
tools/: cmakedebug  logparser.py  midiPlayer  resetdb.c  resetdb_install
